<?xml version="1.0" encoding="UTF-8"?>
<android.support.constraint.ConstraintLayout
    tools:context="dat2017.stepanabus.Routes"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/lightgrey"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- <android.support.v4.widget.NestedScrollView android:layout_width="368dp" android:layout_height="495dp" tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp"> <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"> <Button android:id="@+id/button" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_marginEnd="16dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginStart="16dp"
    app:layout_constraintRight_toRightOf="parent" android:onClick="sendMessage" android:text="@string/common_google_play_services_enable_button" />
     </LinearLayout> </android.support.v4.widget.NestedScrollView> -->
    <!--Below is Daron's code-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp">

        <CheckBox
            android:id="@+id/checkbox_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/r1"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:theme="@style/checkBoxStyle1"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/r2"
            android:textColor="@android:color/holo_red_dark"
            android:theme="@style/checkBoxStyle2"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkbox_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/r3"
            android:textColor="@android:color/holo_green_dark"
            android:theme="@style/checkBoxStyle3"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkbox_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/r4"
            android:textColor="@color/yellow"
            android:theme="@style/checkBoxStyle4"
            android:textSize="24sp" />
        <CheckBox android:id="@+id/checkbox_5"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/r5"
            android:textColor="@color/darkorange"
            android:textSize="24sp"
            android:theme="@style/checkBoxStyle5"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_6"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/r6"
            android:textColor="@color/darkpurple"
            android:textSize="24sp"
            android:theme="@style/checkBoxStyle6"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_7"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/r7"
            android:textColor="@color/amethyst"
            android:textSize="24sp"
            android:theme="@style/checkBoxStyle7"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_8"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/r8"
            android:theme="@style/checkBoxStyle8"
            android:textColor="@color/darkblue"
            android:textSize="24sp"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_9"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/r9"
            android:theme="@style/checkBoxStyle9"
            android:textColor="@color/brown"
            android:textSize="24sp"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/checkbox_10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/r10"
            android:textColor="@color/jade"
            android:theme="@style/checkBoxStyle10"
            android:textSize="24sp"
            android:onClick="onCheckboxClicked"/>


        <Button android:id="@+id/button1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/go"
            android:theme="@style/checkBoxStyle1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>