<?xml version="1.0"?>
<android.support.constraint.ConstraintLayout
    tools:context="dat2017.stepanabus.MapsActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- <Button android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Stop 1" android:layout_marginRight="8dp"  android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="@+id/map" android:layout_marginBottom="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" /> -->
    <fragment android:id="@+id/map"
        tools:context="dat2017.stepanabus.MapsActivity"
        android:layout_height="0dp"
        android:layout_width="401dp"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        map:layout_constraintVertical_bias="0.0"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintBottom_toBottomOf="parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:map="http://schemas.android.com/apk/res-auto"/>
    <!--Daron's code below-->
    <TextView
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:text="@string/check1"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/check2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="-0.99"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/check3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/yellow"
        android:text="@string/check4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/darkorange"
        android:text="@string/check5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
        android:id="@+id/textView6"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/darkpurple"
        android:text="@string/check6"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
        android:id="@+id/textView7"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        app:layout_constraintHorizontal_bias="-0.99"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/amethyst"
        android:text="@string/check7"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
        android:id="@+id/textView8"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/darkblue"
        android:text="@string/check8"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
        android:id="@+id/textView9"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/brown"
        android:text="@string/check9"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
        android:id="@+id/textView10"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="-0.99"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/jade"
        android:text="@string/check10"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>
</android.support.constraint.ConstraintLayout>